@@ -45,6 +45,7 @@ __docformat__ = 'reStructuredText'
 
 import re
 
+import docutils
 from docutils import nodes, writers, languages
 try:
     import roman
@@ -167,8 +168,8 @@ class Translator(nodes.NodeVisitor):
 
     words_and_spaces = re.compile(r'\S+| +|\n')
     possibly_a_roff_command = re.compile(r'\.\w')
-    document_start = """Man page generated from reStructuredText."""
-    # TODO add "from docutils 0.21rc1."
+    document_start = ( 'Man page generated from reStructuredText by manpage writer\n'
+                      f'from docutils {docutils.__version__}.' )
 
     def __init__(self, document):
         nodes.NodeVisitor.__init__(self, document)
@@ -623,7 +624,7 @@ class Translator(nodes.NodeVisitor):
         if self._docinfo['copyright']:
             self.body.append('.SH COPYRIGHT\n%s\n'
                              % self._docinfo['copyright'])
-        self.body.append(self.comment('Generated by docutils manpage writer.'))
+        self.body.append(self.comment_begin('End of generated man page.'))
 
     def visit_emphasis(self, node):
         self.body.append(self.defs['emphasis'][0])
