@@ -38,6 +38,10 @@ class WriterPublishTestCase(unittest.TestCase):
                         }).decode()
                     self.assertEqual(case_expected, output)
 
+document_start = r""".\" Man page generated from reStructuredText by manpage writer
+.\" from docutils 0.22b.dev.
+.
+"""
 
 indend_macros = r""".
 .nr rst2man-indent-level 0
@@ -72,13 +76,10 @@ totest = {}
 
 totest['blank'] = [
         ["",
-        r""".\" Man page generated from reStructuredText.
-.
-""" + indend_macros + """.TH "" "" "" ""
+         document_start + indend_macros + """.TH "" "" "" ""
 .SH NAME
  \\- \n\
-.\\" Generated by docutils manpage writer.
-.
+.\\" End of generated man page.
 """],
         [r"""Hello, world.
 =============
@@ -87,9 +88,8 @@ totest['blank'] = [
    This broke docutils-sphinx.
 
 """,
-        r""".\" Man page generated from reStructuredText.
-.
-""" + indend_macros + """.TH "HELLO, WORLD." "" "" ""
+         document_start + indend_macros +
+""".TH "HELLO, WORLD." "" "" ""
 .SH NAME
 Hello, world. \\- \n\
 .sp
@@ -99,8 +99,7 @@ Hello, world. \\- \n\
 This broke docutils\\-sphinx.
 .UNINDENT
 .UNINDENT
-.\\" Generated by docutils manpage writer.
-.
+.\\" End of generated man page.
 """],
 ]
 
@@ -164,9 +163,8 @@ With mixed case.
 and . in a line and at line start
 .in a paragraph
 """,
-        r""".\" Man page generated from reStructuredText.
-.
-""" + indend_macros + """\
+         document_start + indend_macros +
+"""\
 .TH "SIMPLE" "1" "2009-08-05" "0.1" "text processing"
 .SH NAME
 simple \\- The way to go
@@ -230,8 +228,7 @@ someone@somewhere.net
 Arbitrary field: some text
 .SH COPYRIGHT
 public domain
-.\\" Generated by docutils manpage writer.
-.
+.\\" End of generated man page.
 """],
 ]
 
@@ -246,9 +243,7 @@ totest['table'] = [
 """,
 '''\
 \'\\" t
-.\\" Man page generated from reStructuredText.
-.
-''' + indend_macros + '''.TH "" "" "" ""
+''' + document_start + indend_macros + '''.TH "" "" "" ""
 .SH NAME
  \\- \n\
 .INDENT 0.0
@@ -276,8 +271,7 @@ T}
 .TE
 .UNINDENT
 .UNINDENT
-.\\" Generated by docutils manpage writer.
-.
+.\\" End of generated man page.
 ''']
 ]
 
@@ -300,10 +294,7 @@ $
 ]
    bla bla bla
 """,
-        """\
-.\\" Man page generated from reStructuredText.
-.
-""" + indend_macros + """.TH "" "" "" ""
+document_start + indend_macros + """.TH "" "" "" ""
 .SH NAME
  \\- \n\
 optin group with dot as group item
@@ -332,8 +323,7 @@ bla bla bla
 .B ]
 bla bla bla
 .UNINDENT
-.\\" Generated by docutils manpage writer.
-.
+.\\" End of generated man page.
 """],
 ]
 
@@ -357,10 +347,7 @@ Section
     Description of Term 1 Description of Term 1
 
 """,
-'''\
-.\\" Man page generated from reStructuredText.
-.
-''' + indend_macros + '''.TH "DEFINITION LIST TEST" "" "" ""
+document_start + indend_macros + '''.TH "DEFINITION LIST TEST" "" "" ""
 .SH NAME
 Definition List Test \\- \n\
 ''' + '''.SS Abstract
@@ -376,8 +363,7 @@ Description of Term 1 Description of Term 1
 Description of Term 1 Description of Term 1 Description of Term 1
 Description of Term 1 Description of Term 1
 .UNINDENT
-.\\" Generated by docutils manpage writer.
-.
+.\\" End of generated man page.
 '''],
 ]
 
@@ -387,9 +373,7 @@ totest['cmdlineoptions'] = [
   --output FILE, -o FILE     output filename
   -i DEVICE, --input DEVICE  input device
 """,
-        r""".\" Man page generated from reStructuredText.
-.
-""" + indend_macros + """.TH "" "" "" ""
+document_start + indend_macros + """.TH "" "" "" ""
 .SH NAME
  \\- \n\
 .INDENT 0.0
@@ -407,8 +391,7 @@ output filename
 input device
 .UNINDENT
 .UNINDENT
-.\\" Generated by docutils manpage writer.
-.
+.\\" End of generated man page.
 """],
 ]
 
@@ -416,16 +399,13 @@ totest['citation'] = [
         [""".. [docutils] blah blah blah
 .. [empty_citation]
 """,
-        r""".\" Man page generated from reStructuredText.
-.
-""" + indend_macros + """.TH "" "" "" ""
+document_start + indend_macros + """.TH "" "" "" ""
 .SH NAME
  \\- \n\
 .IP [docutils] 5
 blah blah blah
 .IP [empty_citation] 5
-.\\" Generated by docutils manpage writer.
-.
+.\\" End of generated man page.
 """],
 ]
 
@@ -435,9 +415,7 @@ totest['rubric'] = [
 - followed by
 - a list
 """,
-        r""".\" Man page generated from reStructuredText.
-.
-""" + indend_macros + """.TH "" "" "" ""
+document_start + indend_macros + """.TH "" "" "" ""
 .SH NAME
  \\- \n\
 some rubric
@@ -447,8 +425,7 @@ followed by
 .IP \\(bu 2
 a list
 .UNINDENT
-.\\" Generated by docutils manpage writer.
-.
+.\\" End of generated man page.
 """],
 ]
 
@@ -458,9 +435,7 @@ totest['double_quote'] = [
 
 They are "escaped" anywhere.
 """,
-        r""".\" Man page generated from reStructuredText.
-.
-""" + indend_macros + """.TH "" "" "" ""
+document_start + indend_macros + """.TH "" "" "" ""
 .SH NAME
  \\- \n\
 .INDENT 0.0
@@ -470,8 +445,7 @@ double quotes must be escaped on macro invocations.
 .UNINDENT
 .sp
 They are \\(dqescaped\\(dq anywhere.
-.\\" Generated by docutils manpage writer.
-.
+.\\" End of generated man page.
 """],
 ]
 
@@ -491,15 +465,12 @@ in short
 
 Test title, docinfo to man page header.
 """,
-        r""".\" Man page generated from reStructuredText.
-.
-""" + indend_macros + r""".TH "PAGE TITLE" "3" "3/Nov/2022" "0.0" "the books"
+document_start + indend_macros + r""".TH "PAGE TITLE" "3" "3/Nov/2022" "0.0" "the books"
 .SH NAME
 page title \- in short
 .sp
 Test title, docinfo to man page header.
-.\" Generated by docutils manpage writer.
-.
+.\" End of generated man page.
 """],
 ]
 
